--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "devDependencies": {
-    "bunyan-hub-logger": "^1.1.2",
-    "tape": "^4.0.0"
+    "tape": "^4.0.0",
+    "tape-bunyan-pub-stream": "^0.1.1"
+  },
+  "dependencies": {
+    "bunyan-hub-logger": "^1.1.2"
   }
 }
